--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.16.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "lodash": "^4.17.10",
     "morgan": "~1.9.0"
   },
   "description": "Multi seller, multi vendor ecommerce marketplace with focus on minimalism.",
