Initial Navigation Outline

--- a/config.json
+++ b/config.json
@@ -1,3 +1,5 @@
 {
-  "title":"eSELR"
+  "company":"eSELR",
+  "title":"eSELR",
+  "note":"Wise, Trustworthy, Open, Portable, Sustainable, Safe and Secure. Welcome to the sustainable design revolution."
 }
