--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "company":"eSELR",
+  "owner":"eSELR",
   "title":"eSELR",
   "note":"Wise, Trustworthy, Open, Portable, Sustainable, Safe and Secure. Welcome to the sustainable design revolution."
 }
