--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "chromatism": "^3.0.0",
     "clear-module": "^3.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -17,6 +18,7 @@
     "morgan": "~1.9.0",
     "oneof": "^1.0.1",
     "opn": "^5.3.0",
+    "random-seed": "^0.3.0",
     "uuid": "^3.3.2"
   },
   "description": "Multi seller, multi vendor ecommerce marketplace with focus on minimalism.",
