--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "chromatism": "^3.0.0",
     "clear-module": "^4.0.0",
     "cookie-parser": "~1.4.4",
-    "debug": "~4.1.1",
+    "debug": "^4.3.4",
     "express": "~4.17.1",
     "hbs": "^4.0.6",
     "http-errors": "~1.7.3",
