--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clear-module": "^4.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "^4.3.4",
-    "express": "~4.17.1",
+    "express": "^4.19.2",
     "hbs": "^4.0.6",
     "http-errors": "~1.7.3",
     "lodash": "^4.17.15",
