"Maintenance: npm update, npm audit, add save script."

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "hbs": "^4.0.6",
     "http-errors": "~1.7.3",
     "lodash": "^4.17.15",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "oneof": "^1.1.0",
     "opn": "^6.0.0",
     "random-seed": "^0.3.0",
